--- a/views/pages/addSalarie.ejs
+++ b/views/pages/addSalarie.ejs
@@ -1,16 +1,51 @@
-<form>
+<form method="post" action="/add">
+  <div class="row mb-3">
+    <div class="col-md-6">
+      <label for="fname" class="form-label">Prénom</label>
+      <input type="text" class="form-control" id="fname" name="fname">
+    </div>
+    <div class="col-md-6">
+      <label for="lname" class="form-label">Nom</label>
+      <input type="text" class="form-control" id="lname" name="lname">
+    </div>
+    <div class="col-md-6">
+      <label for="avatar" class="form-label">Photo</label>
+      <input type="file" class="form-control" id="avatar" name="avatar" accept="image/*">
+    </div>
+  </div>
+
   <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    <label for="birth_date" class="form-label">Date de naissance</label>
+    <input type="date" class="form-control" id="birth_date" name="birth_date">
   </div>
+
   <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+    <label for="email" class="form-label">Adresse email</label>
+    <input type="email" class="form-control" id="email" name="email">
   </div>
-  <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+
+  <div class="mb-3">
+    <label for="password" class="form-label">Mot de passe</label>
+    <input type="password" class="form-control" id="password" name="password">
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+
+  <div class="mb-3">
+    <label for="adress" class="form-label">Adresse</label>
+    <input type="text" class="form-control" id="adress" name="adresse.adress">
+  </div>
+
+  <div class="row mb-3">
+    <div class="col-md-6">
+      <label for="cp" class="form-label">Code postal</label>
+      <input type="number" class="form-control" id="cp" name="adresse.cp">
+    </div>
+    <div class="col-md-6">
+      <label for="city" class="form-label">Ville</label>
+      <input type="text" class="form-control" id="city" name="adresse.city">
+    </div>
+  </div>
+
+  <div class="d-grid">
+    <button type="submit" class="btn btn-primary">Valider</button>
+  </div>
 </form>
