ajout du select poste dans l'ajout de salarie

--- a/views/pages/addSalarie.ejs
+++ b/views/pages/addSalarie.ejs
@@ -14,6 +14,15 @@
     </div>
   </div>
 
+  <label for="poste">Poste :</label>
+    <select id="poste" name="poste">
+      <option value="">--Sélectionner--</option>
+      <option value="salarie">Salarié</option>
+      <option value="stagiaire">Stagiaire</option>
+      <option value="apprenti">Apprenti</option>
+    </select><br><br>
+
+
   <div class="mb-3">
     <label for="birth_date" class="form-label">Date de naissance</label>
     <input type="date" class="form-control" id="birth_date" name="birth_date">
