modifocation des root et lien entre la liste des employés et la page de listing

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,9 +10,17 @@
      <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <%- include('./partials/nav.ejs') %>
+    <header>
+        <%- include('./partials/nav.ejs') %>
+    </header>
     
-    <%- body %>
+    <main>
+        <%- body %>
+    </main>
+
+    <aside>
+
+    </aside>
 
     <%- include('./partials/footer.ejs') %>
 </body>
