--- a/views/pages/admin/addSalarie.ejs
+++ b/views/pages/admin/addSalarie.ejs
@@ -1,60 +1,80 @@
-<form method="post" action="/add">
-  <div class="row mb-3">
-    <div class="col-md-6">
-      <label for="fname" class="form-label">Prénom</label>
-      <input type="text" class="form-control" id="fname" name="fname">
-    </div>
-    <div class="col-md-6">
-      <label for="lname" class="form-label">Nom</label>
-      <input type="text" class="form-control" id="lname" name="lname">
-    </div>
-    <div class="col-md-6">
-      <label for="avatar" class="form-label">Photo</label>
-      <input type="file" class="form-control" id="avatar" name="avatar" accept="image/*">
-    </div>
-  </div>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+        <h1 class="m-5 d-flex justify-content-center"> Ajouter un salarié</h1>
 
-  <label for="poste">Poste :</label>
-    <select id="poste" name="poste">
-      <option value="">--Sélectionner--</option>
-      <option value="salarie">Salarié</option>
-      <option value="stagiaire">Stagiaire</option>
-      <option value="apprenti">Apprenti</option>
-    </select><br><br>
+        <div class="card-body p-5">
+          <form method="post" action="/add">
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <label for="fname" class="form-label">Prénom</label>
+                <input type="text" class="form-control" id="fname" name="fname">
+              </div>
+              <div class="col-md-6">
+                <label for="lname" class="form-label">Nom</label>
+                <input type="text" class="form-control" id="lname" name="lname">
+              </div>
+              <div class="col-md-6">
+                <label for="avatar" class="form-label">Photo</label>
+                <input type="file" class="form-control" id="avatar" name="avatar" accept="image/*">
+              </div>
+            </div>
+
+            <label for="poste">Poste :</label>
+            <select id="poste" name="poste">
+              <option value="">--Sélectionner--</option>
+              <option value="salarie">Salarié</option>
+              <option value="stagiaire">Stagiaire</option>
+              <option value="apprenti">Apprenti</option>
+            </select><br><br>
 
 
-  <div class="mb-3">
-    <label for="birth_date" class="form-label">Date de naissance</label>
-    <input type="date" class="form-control" id="birth_date" name="birth_date">
-  </div>
+            <div class="mb-3">
+              <label for="birth_date" class="form-label">Date de naissance</label>
+              <input type="date" class="form-control" id="birth_date" name="birth_date">
+            </div>
 
-  <div class="mb-3">
-    <label for="email" class="form-label">Adresse email</label>
-    <input type="email" class="form-control" id="email" name="email">
-  </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Adresse email</label>
+              <input type="email" class="form-control" id="email" name="email">
+            </div>
 
-  <div class="mb-3">
-    <label for="password" class="form-label">Mot de passe</label>
-    <input type="password" class="form-control" id="password" name="password">
-  </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Mot de passe</label>
+              <input type="password" class="form-control" id="password" name="password">
+            </div>
 
-  <div class="mb-3">
-    <label for="adress" class="form-label">Adresse</label>
-    <input type="text" class="form-control" id="adress" name="adresse.adress">
-  </div>
+            <div class="mb-3">
+              <label for="adress" class="form-label">Adresse</label>
+              <input type="text" class="form-control" id="adress" name="adresse.adress">
+            </div>
 
-  <div class="row mb-3">
-    <div class="col-md-6">
-      <label for="cp" class="form-label">Code postal</label>
-      <input type="number" class="form-control" id="cp" name="adresse.cp">
-    </div>
-    <div class="col-md-6">
-      <label for="city" class="form-label">Ville</label>
-      <input type="text" class="form-control" id="city" name="adresse.city">
-    </div>
-  </div>
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <label for="cp" class="form-label">Code postal</label>
+                <input type="number" class="form-control" id="cp" name="adresse.cp">
+              </div>
+              <div class="col-md-6">
+                <label for="city" class="form-label">Ville</label>
+                <input type="text" class="form-control" id="city" name="adresse.city">
+              </div>
+            </div>
 
-  <div class="d-grid">
-    <button type="submit" class="btn btn-primary">Valider</button>
-  </div>
-</form>
+            <div>
+              <div class="col-md-6">
+                <label for="observation" class="form-label">Observation</label>
+                <textarea class="form-control" name="observation" id="observation"></textarea>
+              </div>
+              <div class="col-md-6">
+                <label for="documents">Documents</label>
+                <input type="file" name="documents" id="documents" class="form-control" multiple>
+
+              </div>
+            </div>
+
+            <div class="d-grid mt-4">
+              <button type="submit" class="btn btn-primary">Valider</button>
+            </div>
+          </form>
+        </div>
