--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -2,8 +2,10 @@
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 70px;
-  padding-right: 100px;
+  padding-right: 70px;
   background: linear-gradient(45deg, #8F95D3, #D3C4E3, #DBB1BC);
+  font-size: large;
+  border-bottom: 1px solid black;
 }
 .navbar div {
   color: #FFF;
@@ -15,10 +17,33 @@
   text-decoration: none;
   color: #FFF;
 }
+.navbar div ul a:hover {
+  text-decoration: underline;
+  color: #89DAFF;
+}
 .navbar #logo {
   width: 50px;
   transition: all 0.3s ease;
 }
 .navbar #logo:hover {
   content: url("/ASSET/img/Logo_Noir.svg");
+}
+.navbar #avatar {
+  width: 50px;
+}
+
+footer {
+  margin: 0;
+}
+footer .logo {
+  width: 50%;
+  border-bottom: 1px solid black;
+}
+footer #logo {
+  width: 100px;
+}
+
+main {
+  background-color: rgba(238, 238, 238, 0.9333333333);
+  height: 2000px;
 }/*# sourceMappingURL=style.css.map */
