--- a/public/CSS/style.scss
+++ b/public/CSS/style.scss
@@ -5,16 +5,19 @@ $quatuor-color: #DBB1BC;
 $valid-color: #64C36B;
 $white: #FFF;
 
+// ! NAVBAR
 .navbar {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 70px;
-    padding-right: 100px;
+    padding-right: 70px;
     background: linear-gradient(45deg, $primary-color, $tertiaire-color, $quatuor-color);
+    font-size: large;
+    border-bottom: 1px solid black;
 
     div {
         color: $white ;
-        
+
         ul {
             list-style-type: none;
 
@@ -22,15 +25,45 @@ $white: #FFF;
                 text-decoration: none;
                 color: $white;
             }
-        }   
+
+            a:hover {
+                text-decoration: underline;
+                color: $secondary-color;
+            }
+        }
     }
 
-    #logo{
-        width: 50px;  
+    #logo {
+        width: 50px;
         transition: all 0.3s ease;
-        
+
     }
+
     #logo:hover {
         content: url('/ASSET/img/Logo_Noir.svg');
     }
+
+    #avatar {
+        width: 50px;
+    }
+}
+
+// ! FOOTER
+footer {
+    margin: 0;
+
+    .logo {
+        width: 50%;
+        border-bottom: 1px solid black;
+    }
+
+    #logo {
+        width: 100px;
+    }
+}
+
+// ! MAIN
+main {
+    background-color: #EEEE;
+    height: 2000px;
 }
