--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 
 	<nav class="navbar">
 		<!-- Elements Left (logo/link) -->
-		<div class="d-flex flex-row justify-content-center align-items-center">
+		<div class="d-none d-lg-flex flex-lg-row justify-content-lg-center align-items-lg-center">
 			<span class="d-flex align-items-center">
 				<a href="/"><img id="logo" src="ASSET/img/Logo_Beige.svg" alt="Logo Ava Moon Nails"></a>
 			</span>
@@ -16,8 +16,63 @@
 			</div> 
 		</div>
 
+		<div class="d-lg-none d-sm-flex flex-sm-row justify-content-sm-center align-items-sm-center">
+			<nav class="navbar fixed-top gradient-navbar d-lg-none">
+  <div class="container-fluid">
+    <div class="row w-100 align-items-center">
+
+      <!-- Logo à gauche -->
+      <div class="col-4 text-start">
+        <a href="/" class="navbar-brand">
+          <img src="ASSET/img/Logo_Beige.svg" alt="Logo Ava Moon Nails" id="logo" width="40">
+        </a>
+      </div>
+
+      <!-- Menu burger au centre -->
+      <div class="col-4 text-center">
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+
+      <!-- Icônes à droite -->
+      <div class="col-4 d-flex justify-content-end align-items-center gap-2">
+        <span>
+				<svg xmlns="http://www.w3.org/2000/svg" width="25" height="30" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
+					<path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2M8 1.918l-.797.161A4 4 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4 4 0 0 0-3.203-3.92zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5 5 0 0 1 13 6c0 .88.32 4.2 1.22 6"/>
+				</svg>
+			</span>
+        <img id="avatar" src="ASSET/img/la-personne.png" alt="Avatar" width="35" class="rounded-circle">
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Menu offcanvas -->
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar">
+    <div class="offcanvas-header">
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Fermer"></button>
+    </div>
+    <div class="offcanvas-body">
+      <ul class="navbar-nav flex-column">
+        <li class="nav-item"><a class="nav-link" href="/">Accueil</a></li>
+        <li class="nav-item"><a class="nav-link" href="/planning">Planning</a></li>
+        <li class="nav-item"><a class="nav-link" href="/messagerie">Messagerie</a></li>
+        <li class="nav-item"><a class="nav-link" href="/documents">Documents</a></li>
+        <li class="nav-item"><a class="nav-link" href="/listeEmployer">Salariés</a></li>
+      </ul>
+    </div>
+	<div class="offcanvas-body">
+		<button>Déconnexion</button>
+	</div>
+  </div>
+</nav>
+
+		</div>
+
 		<!-- Elements Right (notif/Avatar) -->
-		<div class="d-flex align-items-center gap-5">
+		<div class="d-none d-lg-flex align-items-lg-center gap-lg-5">
 			<span>
 				<svg xmlns="http://www.w3.org/2000/svg" width="25" height="30" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
 					<path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2M8 1.918l-.797.161A4 4 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4 4 0 0 0-3.203-3.92zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5 5 0 0 1 13 6c0 .88.32 4.2 1.22 6"/>
