--- a/public/CSS/style.scss
+++ b/public/CSS/style.scss
@@ -6,11 +6,11 @@ $valid-color: #64C36B;
 $white: #FFF;
 
 // ! NAVBAR
-.navbar {
+header {
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 70px;
-    padding-right: 70px;
+    padding-left: 50px;
+    padding-right: 50px;
     background: linear-gradient(45deg, $primary-color, $tertiaire-color, $quatuor-color);
     font-size: large;
     border-bottom: 1px solid black;
@@ -31,6 +31,7 @@ $white: #FFF;
                 color: $secondary-color;
             }
         }
+
     }
 
     #logo {
@@ -46,7 +47,47 @@ $white: #FFF;
     #avatar {
         width: 50px;
     }
+
+
 }
+
+.gradient-navbar {
+  background: linear-gradient(45deg, $primary-color, $tertiaire-color, $quatuor-color);
+  padding: 0 15px;
+  height: 60px; // ajuste selon ta hauteur désirée
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid black;
+
+  .container-fluid {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  #logo {
+    width: 40px;
+  }
+
+  #avatar {
+    width: 35px;
+    border-radius: 50%;
+  }
+
+  .navbar-toggler {
+    margin: 0 auto; // centre horizontalement
+  }
+
+  .navbar-toggler-icon {
+    filter: brightness(0) invert(1); // icône blanche si fond coloré
+
+
+  }
+}
+
 
 // ! FOOTER
 footer {
@@ -65,5 +106,6 @@ footer {
 // ! MAIN
 main {
     background-color: #EEEE;
+    padding-top: 20px;
     height: 2000px;
 }
