modification pour le mettre à jour

--- a/views/pages/admin/addSalarie.ejs
+++ b/views/pages/admin/addSalarie.ejs
@@ -24,9 +24,9 @@
             <label for="poste">Poste :</label>
             <select id="poste" name="poste">
               <option value="">--Sélectionner--</option>
-              <option value="salarie">Salarié</option>
-              <option value="stagiaire">Stagiaire</option>
-              <option value="apprenti">Apprenti</option>
+              <option value="Salarie">Salarié</option>
+              <option value="Stagiaire">Stagiaire</option>
+              <option value="Apprenti">Apprenti</option>
             </select><br><br>
 
 
