--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,11 +7,17 @@
 
     <!-- Link -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-     <link rel="stylesheet" href="CSS/style.css">
+
+    <% var hideLayout = typeof hideLayout !== 'undefined' ? hideLayout : false; %>
+    <% if (!hideLayout) { %>
+        <link rel="stylesheet" href="CSS/style.css">
+    <% } %>
 </head>
 <body>
     <header>
-        <%- include('./partials/nav.ejs') %>
+       <% if (!hideLayout) { %>
+            <%- include('./partials/nav.ejs') %>
+        <% } %>
     </header>
     
     <main>
@@ -22,7 +28,9 @@
 
     </aside>
 
-    <%- include('./partials/footer.ejs') %>
+    <% if (!hideLayout) { %>
+        <%- include('./partials/footer.ejs') %>
+    <% } %>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
