modification de la gestion de la session utilisateur pour inclure le prénom et le nom de famille dans la session, et ajout de la fonctionnalité de déconnexion.

--- a/views/pages/profil.ejs
+++ b/views/pages/profil.ejs
@@ -1,1 +1,3 @@
 <h1>Bonjour Vous êtes sur votre profil</h1>
+
+<a href="/logout"><input type="connexion" value="Se déconnecter" class="btn btn-primary"></a>
