--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -79,7 +79,7 @@
 				</svg>
 			</span>
 			<span>
-				<a href="/login"><img id="avatar" src="ASSET/img/la-personne.png" alt="Avatar"></a>
+				<a href="/profil"><img id="avatar" src="ASSET/img/la-personne.png" alt="Avatar"></a>
 			</span>
 		</div>
 
