ajout de la page profil avec la card

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,7 @@
     <% var hideLayout = typeof hideLayout !== 'undefined' ? hideLayout : false; %>
     <% if (!hideLayout) { %>
         <link rel="stylesheet" href="CSS/style.css">
+        <link rel="stylesheet" href="CSS/profil.css">
     <% } %>
 </head>
 <body>
