--- a/views/pages/profil.ejs
+++ b/views/pages/profil.ejs
@@ -1,3 +1,30 @@
-<h1>Bonjour Vous êtes sur votre profil</h1>
-
-<a href="/logout"><input type="connexion" value="Se déconnecter" class="btn btn-primary"></a>
+<div class="container bg-profil">
+    <div class="container card d-flex flex-row justify-content-center align-items-center p-5">
+        <div class="col-4">
+            <img src="" alt="pp user">
+        </div>
+        <div class="card-body col-8 d-flex flex-column justify-content-between gap-5">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+                <h1>
+                    <%= lname%>
+                    <%= fname%>
+                </h1>
+            </div>
+            <div class="d-flex flex-row justify-content-around">
+                <div>
+                    <p><strong> POSTE - </strong> <%= poste%> </p>
+                    <p><strong>EMAIL -</strong> <%= email%></p>
+                    <p><strong>TELEPHONE -</strong> <%= phone%></p>
+                </div>
+                <div>
+                    <p><strong>ADRESSE -</strong> <%= adresse%></p>
+                    <p><strong>VILLE -</strong> <%= city%></p>
+                    <p><strong>COMPLEMENTAIRE -</strong> <%= complement%></p>
+                </div>
+            </div>
+            <div class="d-flex flex-row justify-content-center align-items-center gap-3">
+                <a href="/logout"><input type="connexion" value="Se déconnecter" class="btn btn-primary"></a>
+            </div>
+        </div>
+    </div>
+</div>
