caché le lien salarié pour ceux qui ne sont pas admin

--- a/views/pages/profil.ejs
+++ b/views/pages/profil.ejs
@@ -12,14 +12,14 @@
             </div>
             <div class="d-flex flex-row justify-content-around">
                 <div>
-                    <p><strong> POSTE - </strong> <%= poste%> </p>
-                    <p><strong>EMAIL -</strong> <%= email%></p>
-                    <p><strong>TELEPHONE -</strong> <%= phone%></p>
+                    <p><strong> POSTE - </strong> <%= poste %> </p>
+                    <p><strong>EMAIL -</strong> <%= email %></p>
+                    <p><strong>TELEPHONE -</strong> <%= phone %></p>
                 </div>
                 <div>
-                    <p><strong>ADRESSE -</strong> <%= adresse%></p>
-                    <p><strong>VILLE -</strong> <%= city%></p>
-                    <p><strong>COMPLEMENTAIRE -</strong> <%= complement%></p>
+                    <p><strong>ADRESSE -</strong> <%= adresse %></p>
+                    <p><strong>VILLE -</strong> <%= city %></p>
+                    <p><strong>CODE POSTALE -</strong> <%= cp %></p>
                 </div>
             </div>
             <div class="d-flex flex-row justify-content-center align-items-center gap-3">
