relation entre les employés et les postes VALIDE

--- a/views/pages/admin/addSalarie.ejs
+++ b/views/pages/admin/addSalarie.ejs
@@ -21,8 +21,8 @@
               </div>
             </div>
 
-            <label for="poste">Poste :</label>
-            <select id="poste" name="poste">
+            <label for="postes">Poste :</label>
+            <select id="postes" name="postes">
               <option value="">--Sélectionner--</option>
               <option value="Salarie">Salarié</option>
               <option value="Stagiaire">Stagiaire</option>
