affichage du poste sur la liste des employés

--- a/views/pages/admin/listingEmployee.ejs
+++ b/views/pages/admin/listingEmployee.ejs
@@ -12,7 +12,7 @@
             </div>
             <div>
                 <p>
-                    <strong>Poste:</strong>
+                    <strong>Poste: </strong><%= user.postes.name %>
                 </p>
                 <div>
                     <button><a href="">Voir Plus</a></button>
