--- a/views/pages/admin/listingEmployee.ejs
+++ b/views/pages/admin/listingEmployee.ejs
@@ -5,7 +5,7 @@
     <% employees.forEach(user => { %>
         <div class="card d-flex flex-column justify-content-between align-items-center col-3">
             <div>
-                <img src="<% user.avatar %>" alt="photo de profil" class="img-fluid">
+                <img src="JS/public/data/uploads/<%= user.avatar %>" alt="photo de profil" class="img-fluid">
                 <h3>
                     <%= user.lname %> <%= user.fname %>
                 </h3>
