--- a/views/pages/admin/listingEmployee.ejs
+++ b/views/pages/admin/listingEmployee.ejs
@@ -1,27 +1,23 @@
-<h1> Liste des salariés</h1>
-
-<div class="container d-flex flex-row flex-wrap gap-3 ">
-
-    <% employees.forEach(user => { %>
-        <div class="card d-flex flex-column justify-content-between align-items-center col-3">
-            <div>
-                <img src="JS/public/data/uploads/<%= user.avatar %>" alt="photo de profil" class="img-fluid">
-                <h3>
-                    <%= user.lname %> <%= user.fname %>
-                </h3>
-            </div>
-            <div>
-                <p>
-                    <strong>Poste: </strong><%= user.postes.name %>
-                </p>
-                <div>
-                    <button><a href="">Voir Plus</a></button>
-                </div>
-            </div>
-
-        </div>
-    <% }) %>
+<div class="container d-flex justify-content-center mt-4">
+    <h1> Liste des salariés</h1>
 </div>
+
+  <div class="container mt-5">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
+
+      <% employees.forEach(emp => { %>
+      <div class="col">
+        <div class="employee-card">
+          <img src="/uploads/<%= emp.avatar %>" alt="avatar" class="employee-avatar">
+          <div class="employee-name"><%= emp.lname %> <%= emp.fname %></div>
+          <div class="employee-poste"><%= emp.postes.name %></div>
+          <button class="btn btn-voir-plus">Voir plus</button>
+        </div>
+      </div>
+      <% }) %>
+
+    </div>
+  </div>
 
 <div>
     <a href="/ajout-salarie"><button>+</button></a>
