--- a/views/pages/profil.ejs
+++ b/views/pages/profil.ejs
@@ -1,7 +1,7 @@
 <div class="container bg-profil">
     <div class="container card d-flex flex-row justify-content-center align-items-center p-5">
         <div class="col-4">
-            <img src="" alt="pp user">
+            <img src="/uploads/<%= avatar %>" alt="pp user">
         </div>
         <div class="card-body col-8 d-flex flex-column justify-content-between gap-5">
             <div class="d-flex flex-column justify-content-center align-items-center">
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="d-flex flex-row justify-content-center align-items-center gap-3">
-                <a href="/logout"><input type="connexion" value="Se déconnecter" class="btn btn-primary"></a>
+                <a href="/logout"><input type="connexion" value="Se déconnecter" class="btn btn-danger"></a>
             </div>
         </div>
     </div>
