--- a/views/pages/profil.ejs
+++ b/views/pages/profil.ejs
@@ -1,7 +1,7 @@
 <div class="container bg-profil">
     <div class="container card d-flex flex-row justify-content-center align-items-center p-5">
         <div class="col-4">
-            <img src="/uploads/<%= avatar %>" alt="pp user">
+            <img src="/uploads/<%= avatar %>" alt="avatar" class="img-fluid rounded-circle profil-avatar">
         </div>
         <div class="card-body col-8 d-flex flex-column justify-content-between gap-5">
             <div class="d-flex flex-column justify-content-center align-items-center">
@@ -12,7 +12,7 @@
             </div>
             <div class="d-flex flex-row justify-content-around">
                 <div>
-                    <p><strong> POSTE - </strong> <%= poste %> </p>
+                    <p><strong> POSTE - </strong> <%= poste.name %> </p>
                     <p><strong>EMAIL -</strong> <%= email %></p>
                     <p><strong>TELEPHONE -</strong> <%= phone %></p>
                 </div>
