--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -115,4 +115,15 @@ main {
   color: #777;
   font-size: 0.95rem;
   margin-bottom: 10px;
+}
+
+.employee-avatar-profil {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  background-color: #ddd;
+  display: inline-block;
+  margin-bottom: 15px;
 }/*# sourceMappingURL=style.css.map */
