--- a/views/pages/profil.ejs
+++ b/views/pages/profil.ejs
@@ -1,5 +1,6 @@
-<div class="container bg-profil">
-    <div class="container card d-flex flex-row justify-content-center align-items-center p-5">
+<div class="container bg-profil d-flex ">
+    <div class="container card d-lg-flex flex-lg-row justify-content-lg-center align-items-lg-center p-5
+        d-sm-flex flex-sm-column justify-content-sm-center align-items-sm-center gap-5">
         <div class="col-4">
             <img src="/uploads/<%= avatar %>" alt="avatar" class="employee-avatar-profil">
         </div>
@@ -10,13 +11,14 @@
                     <%= fname%>
                 </h1>
             </div>
-            <div class="d-flex flex-row justify-content-around">
-                <div>
+            <div class="d-lg-flex flex-lg-row justify-content-lg-around
+            d-sm-flex flex-sm-column gap-5">
+                <div class="d-sm-flex flex-sm-column gap-2">
                     <p><strong> POSTE - </strong> <%= poste.name %> </p>
                     <p><strong>EMAIL -</strong> <%= email %></p>
                     <p><strong>TELEPHONE -</strong> <%= phone %></p>
                 </div>
-                <div>
+                <div class="d-sm-flex flex-sm-column gap-2">
                     <p><strong>ADRESSE -</strong> <%= adresse %></p>
                     <p><strong>VILLE -</strong> <%= city %></p>
                     <p><strong>CODE POSTALE -</strong> <%= cp %></p>
