--- a/public/CSS/style.scss
+++ b/public/CSS/style.scss
@@ -6,6 +6,7 @@ $valid-color: #64C36B;
 $white: #FFF;
 
 // ! NAVBAR
+// TODO : BACKGROUND NAVBAR
 header {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -34,23 +35,31 @@ header {
 
     }
 
+    // TODO : LOGO 
     #logo {
         width: 50px;
         transition: all 0.3s ease;
 
     }
-
     #logo:hover {
         content: url('/ASSET/img/Logo_Noir.svg');
     }
 
-    #avatar {
+    // TODO : AVATAR
+    .avatar-nav {
         width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+    .avatar-nav:hover {
+        transform: scale(1.1);
     }
 
 
 }
 
+// TODO : NAVBAR SMALL
 .gradient-navbar {
   background: linear-gradient(45deg, $primary-color, $tertiaire-color, $quatuor-color);
   padding: 0 15px;
@@ -72,19 +81,12 @@ header {
     width: 40px;
   }
 
-  #avatar {
-    width: 35px;
-    border-radius: 50%;
-  }
-
   .navbar-toggler {
     margin: 0 auto; // centre horizontalement
   }
 
   .navbar-toggler-icon {
     filter: brightness(0) invert(1); // icône blanche si fond coloré
-
-
   }
 }
 
@@ -143,13 +145,12 @@ main {
       font-size: 0.95rem;
       margin-bottom: 10px;
     }
-
-.employee-avatar-profil{
-      width: 300px;
-      height: 300px;
-      border-radius: 50%;
-      object-fit: cover;
-      background-color: #ddd;
-      display: inline-block;
-      margin-bottom: 15px;
-}
+    .employee-avatar-profil{
+          width: 300px;
+          height: 300px;
+          border-radius: 50%;
+          object-fit: cover;
+          background-color: #ddd;
+          display: inline-block;
+          margin-bottom: 15px;
+    }
