--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,7 @@
     <!-- Link -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
-    <% var hideLayout = typeof hideLayout !== 'undefined' ? hideLayout : false; %>
+    <% var hideLayout = typeof hideLayout !== 'undefined' ? hideLayout : false; %>                                                  <!-- Permet d'enlever le style pour la page de connexion -->
     <% if (!hideLayout) { %>
         <link rel="stylesheet" href="CSS/style.css">
         <link rel="stylesheet" href="CSS/profil.css">
