--- a/views/pages/profil.ejs
+++ b/views/pages/profil.ejs
@@ -1,14 +1,14 @@
 <div class="container bg-profil d-flex ">
     <div class="container card d-lg-flex flex-lg-row justify-content-lg-center align-items-lg-center p-5
         d-sm-flex flex-sm-column justify-content-sm-center align-items-sm-center gap-5">
-        <div class="col-4">
+        <div class="col-lg-4">
             <img src="/uploads/<%= avatar %>" alt="avatar" class="employee-avatar-profil">
         </div>
         <div class="card-body col-8 d-flex flex-column justify-content-between gap-5">
             <div class="d-flex flex-column justify-content-center align-items-center">
                 <h1>
-                    <%= lname%>
-                    <%= fname%>
+                    <strong> <%= lname%> </strong> 
+                    <strong> <%= fname%> </strong>
                 </h1>
             </div>
             <div class="d-lg-flex flex-lg-row justify-content-lg-around
