Ajout du lien vers la page "voir plus" dans la liste des employés EN cours

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,8 +10,8 @@
 
     <% var hideLayout = typeof hideLayout !== 'undefined' ? hideLayout : false; %>                                                  <!-- Permet d'enlever le style pour la page de connexion -->
     <% if (!hideLayout) { %>
-        <link rel="stylesheet" href="CSS/style.css">
-        <link rel="stylesheet" href="CSS/profil.css">
+        <link rel="stylesheet" href="/CSS/style.css">
+        <link rel="stylesheet" href="/CSS/profil.css">
     <% } %>
 </head>
 <body>
