--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,7 +2,7 @@
 	<!-- Elements Left (logo/link) -->
 	<div class="d-none d-lg-flex flex-lg-row justify-content-lg-center align-items-lg-center">
 		<span class="d-flex align-items-center">
-			<a href="/"><img id="logo" src="ASSET/img/Logo_Beige.svg" alt="Logo Ava Moon Nails"></a>
+			<a href="/"><img id="logo" src="/ASSET/img/Logo_Beige.svg" alt="Logo Ava Moon Nails"></a>
 		</span>
 		<div>
 			<ul class="d-flex flex-row gap-4 mb-0 align-items-center">
@@ -25,7 +25,7 @@
 					<!-- ! Logo à gauche -->
 					<div class="col-4 text-start">
 						<a href="/" class="navbar-brand">
-							<img src="ASSET/img/Logo_Beige.svg" alt="Logo Ava Moon Nails" id="logo" width="40">
+							<img src="/ASSET/img/Logo_Beige.svg" alt="Logo Ava Moon Nails" id="logo" width="40">
 						</a>
 					</div>
 
