modification voir plus salarié OK

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,6 +13,8 @@
         <link rel="stylesheet" href="/CSS/style.css">
         <link rel="stylesheet" href="/CSS/profil.css">
     <% } %>
+
+    <link rel="shortcut icon" href="/ASSET/img/Logo_Beige.svg" type="image/x-icon">
 </head>
 <body>
     <header>
