--- a/views/pages/admin/voir-plus.ejs
+++ b/views/pages/admin/voir-plus.ejs
@@ -10,7 +10,7 @@
                     <strong> <%= user.lname%> </strong> 
                     <strong> <%= user.fname%> </strong>
                 </h1>
-                <p> ( <%= user.poste.name %> ) </p>
+                <p> ( <%= user.postes.name %> ) </p>
             </div>
             <div class="d-lg-flex flex-lg-row justify-content-lg-around
             d-sm-flex flex-sm-column gap-5">
