--- a/views/pages/admin/addSalarie.ejs
+++ b/views/pages/admin/addSalarie.ejs
@@ -42,7 +42,12 @@
               <label for="email" class="form-label">Adresse email</label>
               <input type="email" class="form-control" id="email" name="email">
             </div>
-
+            
+            <div class="mb-3">
+              <label for="phone" class="form-label">Téléphone</label>
+              <input type="text" class="form-control" id="phone" name="phone">
+            </div>
+            
             <div class="mb-3">
               <label for="password" class="form-label">Mot de passe</label>
               <input type="password" class="form-control" id="password" name="password">
