Mise à jour de voir plus OK (ne plus touché pour l'instant)

--- a/views/pages/admin/listingEmployee.ejs
+++ b/views/pages/admin/listingEmployee.ejs
@@ -19,6 +19,6 @@
     </div>
   </div>
 
-<div>
-    <a href="/ajout-salarie"><button>+</button></a>
+<div class="text-center mt-3">
+  <a href="/ajout-salarie" class="btn btn-success">Ajouter un utilisateur</a>
 </div>
