--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,12 +6,12 @@
 		</span>
 		<div>
 			<ul class="d-flex flex-row gap-4 mb-0 align-items-center">
-				<li><a href="/">Accueil</a></li>
-				<li><a href="/planning">Planning</a></li>
-				<li><a href="/messagerie">Messagerie</a></li>
-				<li><a href="/documents">Documents</a></li>
+				<li><a href="/"> <i class="bi bi-house-door-fill"></i> Accueil</a></li>
+				<li><a href="/planning"> <i class="bi bi-calendar-week-fill"></i> Planning</a></li>
+				<li><a href="/messagerie"> <i class="bi bi-chat-dots-fill"></i> Messagerie</a></li>
+				<li><a href="/documents"> <i class="bi bi-folder-fill"></i> Documents</a></li>
 				<% if (user.admin===true) { %>
-					<li><a href="/listeEmployer">Salariés</a></li>
+					<li><a href="/listeEmployer"> <i class="bi bi-people-fill"></i> Salariés</a></li>
 					<% } %>
 			</ul>
 		</div>
