--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,6 +7,8 @@
 
     <!-- Link -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
 
     <% var hideLayout = typeof hideLayout !== 'undefined' ? hideLayout : false; %>                                                  <!-- Permet d'enlever le style pour la page de connexion -->
     <% if (!hideLayout) { %>
