--- a/views/pages/admin/listingEmployee.ejs
+++ b/views/pages/admin/listingEmployee.ejs
@@ -1,5 +1,5 @@
 <div class="container d-flex justify-content-center mt-4">
-    <h1> Liste des salariés</h1>
+    <h1> <i class="bi bi-people-fill"></i> Liste des salariés</h1>
 </div>
 
   <div class="container mt-5">
