--- a/views/pages/profil.ejs
+++ b/views/pages/profil.ejs
@@ -7,26 +7,46 @@
         <div class="card-body col-8 d-flex flex-column justify-content-between gap-5">
             <div class="d-flex flex-column justify-content-center align-items-center">
                 <h1>
-                    <strong> <%= lname%> </strong> 
-                    <strong> <%= fname%> </strong>
+                    <strong>
+                        <%= lname%>
+                    </strong>
+                    <strong>
+                        <%= fname%>
+                    </strong>
                 </h1>
             </div>
             <div class="d-lg-flex flex-lg-row justify-content-lg-around
             d-sm-flex flex-sm-column gap-5">
                 <div class="d-sm-flex flex-sm-column gap-2">
-                    <p><strong> POSTE - </strong> <%= poste.name %> </p>
-                    <p><strong>EMAIL -</strong> <%= email %></p>
-                    <p><strong>TELEPHONE -</strong> <%= phone %></p>
+                    <p><strong> POSTE - </strong>
+                        <%= poste.name %>
+                    </p>
+                    <p><strong>EMAIL -</strong>
+                        <%= email %>
+                    </p>
+                    <p><strong>TELEPHONE -</strong>
+                        <%= phone %>
+                    </p>
                 </div>
                 <div class="d-sm-flex flex-sm-column gap-2">
-                    <p><strong>ADRESSE -</strong> <%= adresse %></p>
-                    <p><strong>VILLE -</strong> <%= city %></p>
-                    <p><strong>CODE POSTALE -</strong> <%= cp %></p>
+                    <p><strong>ADRESSE -</strong>
+                        <%= adresse %>
+                    </p>
+                    <p><strong>VILLE -</strong>
+                        <%= city %>
+                    </p>
+                    <p><strong>CODE POSTALE -</strong>
+                        <%= cp %>
+                    </p>
                 </div>
             </div>
             <div class="d-flex flex-row justify-content-center align-items-center gap-3">
-                <a href="/logout"><input type="connexion" value="Se déconnecter" class="btn btn-danger"></a>
+                <a href="/logout" class="btn btn-danger d-flex align-items-center gap-2">
+                    <i class="bi bi-box-arrow-right"></i>
+                    Se déconnecter
+                </a>
             </div>
+
         </div>
     </div>
 </div>
