--- a/views/pages/admin/listingEmployee.ejs
+++ b/views/pages/admin/listingEmployee.ejs
@@ -2,15 +2,19 @@
     <h1> <i class="bi bi-people-fill"></i> Liste des salariés</h1>
 </div>
 
+  <!-- * Liste des employés -->
   <div class="container mt-5">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
 
+      <!-- ! Carte Profil employé -->
       <% employees.forEach(emp => { %>
       <div class="col">
         <div class="employee-card">
           <img src="/uploads/<%= emp.avatar %>" alt="avatar" class="employee-avatar">
           <div class="employee-name"><%= emp.lname %> <%= emp.fname %></div>
           <div class="employee-poste"><%= emp.postes.name %></div>
+
+          <!-- TODO: Bouton Voir plus selon id -->
           <a href="/voir-plus/<%= emp._id%>"><button class="btn btn-voir-plus">Voir plus</button></a>
         </div>
       </div>
@@ -19,6 +23,7 @@
     </div>
   </div>
 
+  <!-- * Bouton Ajouter un utilisateur -->
 <div class="text-center mt-3">
   <a href="/ajout-salarie" class="btn btn-success">Ajouter un utilisateur</a>
 </div>
