--- a/views/pages/admin/voir-plus.ejs
+++ b/views/pages/admin/voir-plus.ejs
@@ -4,16 +4,24 @@
         <div class="col-lg-4">
             <img src="/uploads/<%= user_.avatar %>" alt="avatar" class="employee-avatar-profil">
         </div>
+
+        <!-- * Carte Profil employé -->
         <div class="card-body col-8 d-flex flex-column justify-content-between gap-5">
             <div class="d-flex flex-column justify-content-center align-items-center">
+
+                <!-- * Nom complet -->
                 <h1 class="text-center">
                     <strong> <%= user_.lname%> </strong> 
                     <strong> <%= user_.fname%> </strong>
                 </h1>
                 <p> ( <%= user_.postes.name %> ) </p>
             </div>
+
+            <!-- * Informations supplémentaires -->
             <div class="d-lg-flex flex-lg-row justify-content-lg-around
             d-sm-flex flex-sm-column gap-5">
+
+                <!-- ! Column gauche -->
                 <div class="d-sm-flex flex-sm-column gap-2">
                     <p><strong>EMAIL -</strong>
                         <br> <%= user_.email %></p>
@@ -22,6 +30,8 @@
                     <p><strong> ANNIVERSAIRE - </strong> 
                         <br> <%= user_.birth_date.toLocaleDateString('fr-FR', { day: 'numeric', month: 'long', year: 'numeric' }) %> </p>
                 </div>
+
+                <!-- ! Column droite -->
                 <div class="d-sm-flex flex-sm-column gap-2">
                     <p><strong>ADRESSE -</strong> 
                         <br> <%= user_.adresse.adress %></p>
@@ -31,6 +41,8 @@
                         <br> <%= user_.adresse.cp %></p>
                 </div>
             </div>
+
+            <!-- * Observations -->
             <div class="card-body col-lg-8">
             <div class="d-lg-flex flex-lg-column justify-content-lg-around
             d-sm-flex flex-sm-column">
@@ -39,6 +51,7 @@
             </div>
         </div>
 
+        <!-- TODO ajouter bouton modifier et supprimer l'employé -->
 
     </div>
     </div>
