--- a/views/pages/profil.ejs
+++ b/views/pages/profil.ejs
@@ -4,8 +4,12 @@
         <div class="col-lg-4">
             <img src="/uploads/<%= avatar %>" alt="avatar" class="employee-avatar-profil">
         </div>
+
+        <!-- * Carte Profil -->
         <div class="card-body col-8 d-flex flex-column justify-content-between gap-5">
             <div class="d-flex flex-column justify-content-center align-items-center">
+
+                <!-- * Nom complet -->
                 <h1>
                     <strong>
                         <%= lname%>
@@ -15,8 +19,12 @@
                     </strong>
                 </h1>
             </div>
+
+            <!-- * Informations supplémentaires -->
             <div class="d-lg-flex flex-lg-row justify-content-lg-around
             d-sm-flex flex-sm-column gap-5">
+
+                <!-- ! Column gauche -->
                 <div class="d-sm-flex flex-sm-column gap-2">
                     <p><strong> POSTE - </strong>
                         <%= poste.name %>
@@ -28,6 +36,8 @@
                         <%= phone %>
                     </p>
                 </div>
+
+                <!-- ! Column droite -->
                 <div class="d-sm-flex flex-sm-column gap-2">
                     <p><strong>ADRESSE -</strong>
                         <%= adresse %>
@@ -40,6 +50,8 @@
                     </p>
                 </div>
             </div>
+
+            <!-- * Bouton Déconnexion -->
             <div class="d-flex flex-row justify-content-center align-items-center gap-3">
                 <a href="/logout" class="btn btn-danger d-flex align-items-center gap-2">
                     <i class="bi bi-box-arrow-right"></i>
